fix: side menu alignement

--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -103,13 +103,14 @@ footer {
 .side-menu {
   left: -100%;
   position: absolute;
-  max-width: 400px;
-  width: 66.6%;
+  width: 66%;
+  max-width: 600px;
   height: 100vh;
   display: block;
   background: #fff;
   transition: all .25s ease;
   pointer-events: all;
+  padding-left: calc((100vw - 800px)/2);
 }
 
 .side-menu__open {
